tests/expectations/compiler/scalar/square_root_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372007]: Expected one type from `field`, but got `scalar`
    --> compiler-test:5:16
     |
   5 |         return a.square_root(); // square root not supported for scalar types.
     |                ^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
